--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,10 +13,11 @@
 
 <ion-content class="home">
       Hi, i'm home!
+      <div>{{ col }}</div>
       <ion-list inset>
-          <ion-item *ngFor="let birthday of birthdays" (click)="showDetail(birthday)">
-            <div item-left>{{ birthday.Name }}</div>
-            <div item-right>{{ birthday.Date | date:'yMMMMd' }}</div>
+          <ion-item *ngFor="let dairyEntry of dairy" (click)="showDetail(dairyEntry)">
+            <div item-left>{{ dairyEntry.content }}</div>
+            <div item-right>{{ dairyEntry.date | date:'d MMMM y HH:mm' }}</div>
           </ion-item>
        </ion-list>
 </ion-content>
