--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 
 <ion-content class="home">
       Hi, i'm home!
-      <div>{{ col }}</div>
+      <div>{{ StorageService.collection }}</div>
       <ion-list inset>
           <ion-item *ngFor="let dairyEntry of dairy" (click)="showDetail(dairyEntry)">
             <div item-left>{{ dairyEntry.content }}</div>
